stop overlapping issue of text due to fixed width

--- a/components/Title/Title.module.css
+++ b/components/Title/Title.module.css
@@ -2,7 +2,6 @@
     width: 100%;
 }
 .title_box {
-    width: 90%;
     margin: 0 0;
 }
 .title_box h2 {
